--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
     "motion": "^12.6.5",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
@@ -21,7 +23,8 @@
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^3.2.0",
     "three": "^0.175.0",
-    "three-globe": "^2.42.3"
+    "three-globe": "^2.42.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
